--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@prisma/client": "^5.4.2",
     "daisyui": "^3.9.3",
     "eslint-config-prettier": "^9.0.0",
-    "next": "13.5.5",
+    "next": "^14.0.3",
     "next-auth": "^4.23.2",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
